fix popup label sizing and spacing

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -135,4 +135,6 @@ label[for="font-opendyslexicmono-radio"] {
   font-weight: 700;
   font-size: 14px;
   line-height: 150%;
+  display: block;
+  margin-top: 9px;
 }
